# gaepago_dataset

./: README.md
EDA/: .gitignore  EDA.ipynb  pyproject.toml
EDA/download_dir/: README.md
EDA/metadata/: bark_videos.json  whimper (dog)_videos.json
