[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
librosa = "^0.10.0.post2"
datasets = "^2.12.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
